<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DialogDupPro</class>
 <widget class="QDialog" name="DialogDupPro">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>930</width>
    <height>400</height>
   </rect>
  </property>
  <property name="cursor">
   <cursorShape>ArrowCursor</cursorShape>
  </property>
  <property name="windowTitle">
   <string>Select Peer(s) and Plugin(s)</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QLabel{
color: #6F7F85;
}

QDialog{
background-color: white;
}

QListWidget::item:selected{
    background: #65B0C9;
}

QPushButton:focus{
	border: none;
	outline: none;
}</string>
  </property>
  <widget class="QCheckBox" name="checkBox">
   <property name="geometry">
    <rect>
     <x>630</x>
     <y>310</y>
     <width>131</width>
     <height>22</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>12</pointsize>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">QCheckBox {
   border: none;
   color: #65B0C9;
}</string>
   </property>
   <property name="text">
    <string>All Peers</string>
   </property>
  </widget>
  <widget class="QCheckBox" name="checkBox_2">
   <property name="geometry">
    <rect>
     <x>630</x>
     <y>350</y>
     <width>131</width>
     <height>22</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>12</pointsize>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">QCheckBox {
   border: none;
   color: #65B0C9;
}</string>
   </property>
   <property name="text">
    <string>All Plugins</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton">
   <property name="geometry">
    <rect>
     <x>770</x>
     <y>340</y>
     <width>141</width>
     <height>31</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>12</pointsize>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton{
color: #65B0C9;
background-color: white;
border-radius:6px;
border:1px solid #BBC7C4;
font-family:Ubuntu;
font-size:12pt;
}

QPushButton::hover{
color: white;
background-color: #65B0C9;
border-radius:6px;
border:1px solid #BBC7C4;
font-family:Ubuntu;
font-size:12pt;
}</string>
   </property>
   <property name="text">
    <string>Deploy Plugin</string>
   </property>
  </widget>
  <widget class="QListWidget" name="listWidget">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>60</y>
     <width>261</width>
     <height>310</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border: 1px solid #BBC7C4;
color: #6F7F85;
font-size: 12pt;</string>
   </property>
  </widget>
  <widget class="QListWidget" name="listWidget_2">
   <property name="geometry">
    <rect>
     <x>309</x>
     <y>60</y>
     <width>291</width>
     <height>310</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">border: 1px solid #BBC7C4;
color: #6F7F85;
font-size: 12pt;</string>
   </property>
  </widget>
  <widget class="QProgressBar" name="progressBar">
   <property name="geometry">
    <rect>
     <x>630</x>
     <y>260</y>
     <width>281</width>
     <height>21</height>
    </rect>
   </property>
   <property name="value">
    <number>0</number>
   </property>
   <property name="textVisible">
    <bool>false</bool>
   </property>
   <property name="format">
    <string>%m%</string>
   </property>
  </widget>
  <widget class="QTextBrowser" name="textBrowser">
   <property name="geometry">
    <rect>
     <x>640</x>
     <y>60</y>
     <width>251</width>
     <height>141</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:white;
color: #6F7F85;
border: none;
font-size: 12pt;</string>
   </property>
   <property name="frameShadow">
    <enum>QFrame::Plain</enum>
   </property>
  </widget>
  <widget class="QLabel" name="label_3">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>20</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">color: #65B0C9;</string>
   </property>
   <property name="text">
    <string>Peers</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_4">
   <property name="geometry">
    <rect>
     <x>310</x>
     <y>20</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">color: #65B0C9;</string>
   </property>
   <property name="text">
    <string>Plugins</string>
   </property>
  </widget>
 </widget>
 <tabstops>
  <tabstop>listWidget</tabstop>
  <tabstop>listWidget_2</tabstop>
  <tabstop>checkBox</tabstop>
  <tabstop>checkBox_2</tabstop>
  <tabstop>pushButton</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
